k8s-manifests/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mikhmon-app
  labels:
    name: mikhmon-app
