k8s-manifests/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mikhmon-app
  namespace: mikhmon-app
  labels:
    app: mikhmon-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mikhmon-app
  template:
    metadata:
      labels:
        app: mikhmon-app
    spec:
      containers:
      - name: mikhmon-app
        image: trianwar/mikhmon:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mikhmon-data
          mountPath: /var/www/mikhmon
      volumes:
      - name: mikhmon-data
        persistentVolumeClaim:
          claimName: mikhmon-data-pvc
