k8s-manifests/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mikhmon-app-service
  namespace: mikhmon-app
  labels:
    app: mikhmon-app
spec:
  type: NodePort
  selector:
    app: mikhmon-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
